# analytics-batch-pipeline-reference

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: Dockerfile  init_airflow.sh  requirements.txt
airflow/dags/: premium_transactions_pipeline.py
analysis/: notes.md  output_reference_from_af.csv
batch_pipeline_reference/: Dockerfile  __init__.py  config.py  exceptions.py  helpers.py  logger.py  main.py  models.py  reader.py  transform.py  validator.py  writer.py
dbt/: Dockerfile  profiles.yml  requirements.txt
dbt/analytics/: dbt_project.yml
dbt/analytics/macros/: generate_schema_name.sql
dbt/analytics/macros/tests/: not_negative.sql
dbt/analytics/models/: _governance.yml
dbt/analytics/models/marts/: monthly_currency_totals.sql  monthly_currency_totals.yml  monthly_partner_premiums.sql  monthly_partner_premiums.yml
dbt/analytics/models/raw/: src_premium_transactions.yml
dbt/analytics/tests/: test_invalid_only_groups_not_in_mart.sql  test_monthly_partner_premiums_matches_staging.sql  test_monthly_partner_premiums_positive.sql
input/: premium_transactions_data_20250306.json
makefiles/: dbt.mk  pre_commit.mk  python.mk  services.mk
postgres/: Dockerfile
postgres/init/: 00_create_schemas.sql  01_create_raw_tables.sql  02_create_roles_and_grants.sql
tests/: conftest.py  test_end_to_end.py  test_helpers.py  test_main.py  test_reader.py  test_transform.py  test_validation_result.py  test_validator.py  test_writer.py
(+2 files in other folders)
